--- a/index.html
+++ b/index.html
@@ -623,7 +623,7 @@
                 ? '3Wj9BHs2N75vgEKNGM62QGEPToRQcopK1giZCG2iMCX3' // Your devnet wallet
                 : 'CXDdQc9jzr1ufkj3G51oYuUX8GnFBPAT76yrmnEYRAPa', // Your mainnet wallet
             API_BASE_URL: isDevMode 
-                ? 'http://0.0.0.0:8001' // 'http://localhost:8001' // Dev API
+                ? 'http://127.0.0.1:8001' // 'http://0.0.0.0:8001' // 'http://localhost:8001' // Dev API
                 : 'https://api.chesssol.com', // Production API
             FLUTTERWAVE_PUBLIC_KEY: isDevMode 
                 ? 'FLWPUBK_TEST-2e1916b73be8b0d2011af6d4366e00b2-X' // Test key for demos
