--- a/index.html
+++ b/index.html
@@ -1128,7 +1128,8 @@
                     fromPubkey.toString(),
                     amount,
                     currency,
-                    data.transaction_id.toString(),
+                    // data.transaction_id.toString(),
+                    txid,
                     'Crypto-Initial'
                 );
                 
