--- a/index.html
+++ b/index.html
@@ -1129,7 +1129,7 @@
                     amount,
                     currency,
                     // data.transaction_id.toString(),
-                    txid,
+                    txid.toString(),
                     'Crypto-Initial'
                 );
                 
