--- a/index.html
+++ b/index.html
@@ -1130,7 +1130,7 @@
                     currency,
                     // data.transaction_id.toString(),
                     txid.toString(),
-                    'Crypto-Initial'
+                    'Crypto-Initiate'
                 );
                 
                 showSuccess(`🎉 Payment successful! You contributed ${amount} ${currency} ${isDevMode ? ' (TEST)' : ''}`);
