meta data fixes

--- a/index.html
+++ b/index.html
@@ -4,6 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ChessSol Presale - Own Chess, Play Chess, Grow Chess</title>
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="logo.png">
+
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="Join the ChessSol Presale! Own Chess, Play Chess, Grow Chess. Be part of the first Web3 chess betting and lovers’ token.">
+    <meta name="keywords" content="ChessSol, Chess Token, Web3 Chess, Chess Betting, Chess Lovers, Crypto, Presale, Blockchain, Token Sale">
+    <meta name="author" content="ChessSol Project">
+
+    <!-- Open Graph (Facebook, LinkedIn) -->
+    <meta property="og:title" content="ChessSol Presale - Own Chess, Play Chess, Grow Chess">
+    <meta property="og:description" content="Buy ChessSol tokens and become part of the Web3 chess revolution. A token for players, investors, and true chess lovers.">
+    <meta property="og:image" content="https://roynek.com/presale-ChessSol/logo.png">
+    <meta property="og:url" content="https://roynek.com/presale-ChessSol/">
+    <meta property="og:type" content="website">
+
+    <!-- Twitter Cards -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="ChessSol Presale - Own Chess, Play Chess, Grow Chess">
+    <meta name="twitter:description" content="Be part of the first Web3 chess betting and lovers’ token. Join the ChessSol Presale now!">
+    <meta name="twitter:image" content="https://roynek.com/presale-ChessSol/logo.png">
+    
     <!-- Load Solana Web3 library -->
     <script src="https://unpkg.com/@solana/web3.js@latest/lib/index.iife.js"></script>
     <script src="https://unpkg.com/@solana/spl-token@latest/lib/index.iife.js"></script>
